fix: fix the social section on mobile responsive version according to the Figma design

--- a/wp-content/themes/stirjoy-child-v3-wholesale/style.css
+++ b/wp-content/themes/stirjoy-child-v3-wholesale/style.css
@@ -4802,7 +4802,7 @@ body.page-template-front-page header.header1 + .stirjoy-hero-section {
 }
 
 .social-posts {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     position: relative;
 }
 
